--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="script.js"></script>
+		<script>
+			var state=0;
+			var storage = localStorage;
+		</script>
+
 
 	</head>
 
@@ -33,8 +38,8 @@
 
 
 			<section id="one" class="main special">
-				<div class="container">
-					<a href="index2.html" target="_self" id="choice01" onclick= "savePhotoName(0,1);">
+					<div class="container">
+					<a href="index2.html" target="_self" id="choice01" onclick="savePhotoName(0,1);">
 						<span class="image fit primary">
 							<img id = "img01">
 								<script>
@@ -59,7 +64,12 @@
 
 			<section id="two" class="main special">
 				<div class="container">
-					<a href="index2.html" target="_self" id="choice02" onclick= "savePhotoName(0,2);">
+					<a href="index2.html" target="_self" id="choice02">
+						<script>
+							document.getElementById('img02').onclick=savePhotoName(0,2);
+							storage.setItem('one',photo[1]);
+						</script>
+
 						<span class="image fit primary">
 							<img id = "img02">
 								<script>
@@ -79,7 +89,7 @@
 					<a href="#two" class="goto-;next scrolly">Next</a>
 				</div>
 			</section>
-
+			<input type = hidden  
 		<!-- Three -->
 		<!--
 		<section id="three" class="main special">
@@ -415,7 +425,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 			</section>
 		-->
-
 		<!-- Footer -->
 			<section id="footer">
 				<div class="container">
@@ -436,13 +445,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</form>
 				</div>
 				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
@@ -457,5 +459,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+<!--
+				<script>
+			location.href="index2.html?"+choicePhoto[0]+":"+choiceTitle[0]
+			</script>
+-->
+
 	</body>
 </html>
