--- a/index3.html
+++ b/index3.html
@@ -5,10 +5,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="script.js"></script>
+
 	</head>
 	<body class="is-preload">
-
+		<script src="script.js"></script>
 			<!-- Header -->
 				<section id="header">
 					<header class="major">
@@ -30,10 +30,10 @@
 				<a href="index4.html" target="_self" id="choice05" >
 					<span class="image fit primary">
 						<img id = "img05">
-							<script>
-								document.getElementById('img05').src=photo[0];
-							</script>
-						</a>
+						<script>
+								document.getElementById('img05').src = choicePhoto[0];
+						</script>
+				</a>
 					</span>
 				<div class="content">
 					<header class="major">
