--- a/index.1.html
+++ b/index.1.html
@@ -53,7 +53,7 @@
 						</header>
 					</div>
 						<div class="container">
-							<form action="test.php" method="POST" name="images/bc01.jpg" type="submit">
+							<form action="test.php" method="GET" name="images/bc01.jpg" type="submit">
 								<ul class="actions special">
 										<input type="submit" value="images/bc01.jpg">선택</input>
 									</ul>
